[tool.poetry]
name = "new"
version = "0.1.0"
description = "Industry-standard backend for an AI-powered interview preparation platform."
authors = ["LotixHub <lotixhub@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Code Quality Tools Configuration ---
[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
ignore_missing_imports = true
